@@ -1,5 +1,6 @@
 version 0.1.2:
  * added encoding to python-file (thanks to Anssi)
+ * using high-quality video sources now 
 
 version 0.1.1:
  * added icon.png (thanks to freezy)
